# Solar_Wind_Power

./: .gitignore  MANIFEST.in  main_analysis.py  overview.md  pyproject.toml  requirements.txt
cache/: weather_39.0000_102.0000_2019_PVGIS-ERA5.csv  weather_39.0000_102.0000_2020_PVGIS-ERA5.csv
data/processed/pv_normalized/: pv_normalized_20251208.csv  pv_wind_normalized_20251210_164826.csv
data/raw/weather/: weather_20251208_232717.csv  weather_20251208_233211.csv  weather_20251210_164817.csv  weather_39.0000_102.0000_2020.csv
data/turbines/: custom_10mw.csv  generic_2mw.csv
reports/: qc_report.txt
src/: __init__.py  analyzer.py  config.py  data_manager.py  quality_control.py  simulator.py  visualizer.py  wind_simulator.py
tests/: test_analyzer.py  test_config.py  test_data_manager.py  test_quality_control.py  test_simulator.py  test_visualizer.py  test_wind_simulator.py
