[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Solar_Wind_Power"
version = "1.3.0"
description = "光伏与风电系统全流程出力模拟分析工具"
requires-python = ">=3.10"
dependencies = [
    "pvlib>=0.11.0",
    "windpowerlib>=0.2.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
